添加菜谱小贴士

--- a/HaierOven/Base.lproj/Main.storyboard
+++ b/HaierOven/Base.lproj/Main.storyboard
@@ -462,11 +462,11 @@
                         </view>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="OMb-Au-A6q">
                             <view key="customView" contentMode="scaleToFill" id="SdN-LE-hBp">
-                                <rect key="frame" x="232" y="5" width="71" height="33"/>
+                                <rect key="frame" x="204" y="5" width="80" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tBs-rQ-bKF">
-                                        <rect key="frame" x="11" y="2" width="26" height="26"/>
+                                        <rect key="frame" x="8" y="2" width="26" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="26" id="9GS-cM-Ftn"/>
                                             <constraint firstAttribute="height" constant="26" id="yxK-DC-3cC"/>
@@ -481,7 +481,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="av3-m4-ddN">
-                                        <rect key="frame" x="45" y="2" width="26" height="26"/>
+                                        <rect key="frame" x="50" y="2" width="26" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="26" id="PUg-jS-d6W"/>
                                             <constraint firstAttribute="height" constant="26" id="osd-fM-WVx"/>
@@ -499,8 +499,8 @@
                                 <constraints>
                                     <constraint firstItem="tBs-rQ-bKF" firstAttribute="top" secondItem="SdN-LE-hBp" secondAttribute="top" constant="2" id="QUJ-TN-Aiq"/>
                                     <constraint firstItem="av3-m4-ddN" firstAttribute="top" secondItem="SdN-LE-hBp" secondAttribute="top" constant="2" id="Rko-la-Va1"/>
-                                    <constraint firstItem="av3-m4-ddN" firstAttribute="leading" secondItem="tBs-rQ-bKF" secondAttribute="trailing" constant="8" id="eKy-SJ-cqe"/>
-                                    <constraint firstAttribute="trailing" secondItem="av3-m4-ddN" secondAttribute="trailing" id="ywn-S8-NsM"/>
+                                    <constraint firstItem="av3-m4-ddN" firstAttribute="leading" secondItem="tBs-rQ-bKF" secondAttribute="trailing" constant="16" id="eKy-SJ-cqe"/>
+                                    <constraint firstAttribute="trailing" secondItem="av3-m4-ddN" secondAttribute="trailing" constant="4" id="ywn-S8-NsM"/>
                                 </constraints>
                             </view>
                         </barButtonItem>
@@ -571,11 +571,11 @@
                         </view>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="ICf-rf-Ecr">
                             <view key="customView" contentMode="scaleToFill" id="h7M-Ws-BGg">
-                                <rect key="frame" x="232" y="5" width="71" height="33"/>
+                                <rect key="frame" x="204" y="5" width="80" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MUz-Ob-dX0">
-                                        <rect key="frame" x="11" y="2" width="26" height="26"/>
+                                        <rect key="frame" x="8" y="2" width="26" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="26" id="5BQ-ql-eK8"/>
                                             <constraint firstAttribute="width" constant="26" id="uFt-Vl-qPw"/>
@@ -590,7 +590,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cEu-Qm-Ccn">
-                                        <rect key="frame" x="45" y="2" width="26" height="26"/>
+                                        <rect key="frame" x="50" y="2" width="26" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="26" id="a5p-cG-y2I"/>
                                             <constraint firstAttribute="height" constant="26" id="kj0-z6-X2a"/>
@@ -607,8 +607,8 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="MUz-Ob-dX0" firstAttribute="top" secondItem="h7M-Ws-BGg" secondAttribute="top" constant="2" id="UR8-7H-cNb"/>
-                                    <constraint firstItem="cEu-Qm-Ccn" firstAttribute="leading" secondItem="MUz-Ob-dX0" secondAttribute="trailing" constant="8" id="WbT-vj-aOt"/>
-                                    <constraint firstAttribute="trailing" secondItem="cEu-Qm-Ccn" secondAttribute="trailing" id="e8y-0E-zF6"/>
+                                    <constraint firstItem="cEu-Qm-Ccn" firstAttribute="leading" secondItem="MUz-Ob-dX0" secondAttribute="trailing" constant="16" id="WbT-vj-aOt"/>
+                                    <constraint firstAttribute="trailing" secondItem="cEu-Qm-Ccn" secondAttribute="trailing" constant="4" id="e8y-0E-zF6"/>
                                     <constraint firstItem="cEu-Qm-Ccn" firstAttribute="top" secondItem="h7M-Ws-BGg" secondAttribute="top" constant="2" id="yKo-Df-Qvn"/>
                                 </constraints>
                             </view>
@@ -788,11 +788,11 @@
                         </view>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="oO9-R6-xTa">
                             <view key="customView" contentMode="scaleToFill" id="k0J-7a-Zim">
-                                <rect key="frame" x="232" y="5" width="71" height="33"/>
+                                <rect key="frame" x="233" y="5" width="80" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uTC-Ef-LsB">
-                                        <rect key="frame" x="11" y="2" width="26" height="26"/>
+                                        <rect key="frame" x="8" y="2" width="26" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="26" id="9HY-Yc-qay"/>
                                             <constraint firstAttribute="height" constant="26" id="TaB-5h-MOg"/>
@@ -807,7 +807,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HQq-01-aKI">
-                                        <rect key="frame" x="45" y="2" width="26" height="26"/>
+                                        <rect key="frame" x="50" y="2" width="26" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="26" id="3mf-T2-HKQ"/>
                                             <constraint firstAttribute="height" constant="26" id="PpU-rx-yRT"/>
@@ -823,9 +823,9 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="HQq-01-aKI" secondAttribute="trailing" id="D8m-xt-mIq"/>
+                                    <constraint firstAttribute="trailing" secondItem="HQq-01-aKI" secondAttribute="trailing" constant="4" id="D8m-xt-mIq"/>
                                     <constraint firstItem="uTC-Ef-LsB" firstAttribute="top" secondItem="k0J-7a-Zim" secondAttribute="top" constant="2" id="aXu-NF-ii9"/>
-                                    <constraint firstItem="HQq-01-aKI" firstAttribute="leading" secondItem="uTC-Ef-LsB" secondAttribute="trailing" constant="8" id="iJH-VF-zn6"/>
+                                    <constraint firstItem="HQq-01-aKI" firstAttribute="leading" secondItem="uTC-Ef-LsB" secondAttribute="trailing" constant="16" id="iJH-VF-zn6"/>
                                     <constraint firstItem="HQq-01-aKI" firstAttribute="top" secondItem="k0J-7a-Zim" secondAttribute="top" constant="2" id="ojn-6S-zFS"/>
                                 </constraints>
                             </view>
@@ -2160,7 +2160,7 @@
                             </button>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="MrZ-a2-vpd">
-                            <rect key="frame" x="96" y="5.5" width="128" height="33"/>
+                            <rect key="frame" x="90" y="5.5" width="128" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="厨神名人堂" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JnB-pd-JVZ">
@@ -2177,11 +2177,11 @@
                         </view>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="KLF-Uf-CIY">
                             <view key="customView" contentMode="scaleToFill" id="d6w-lh-UBl">
-                                <rect key="frame" x="232" y="5" width="71" height="33"/>
+                                <rect key="frame" x="233" y="5" width="80" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tPC-wL-Uhr">
-                                        <rect key="frame" x="11" y="2" width="26" height="26"/>
+                                        <rect key="frame" x="8" y="2" width="26" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="26" id="avX-SM-mwC"/>
                                             <constraint firstAttribute="height" constant="26" id="tU6-Lc-7IE"/>
@@ -2196,7 +2196,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ObF-vq-I3P">
-                                        <rect key="frame" x="45" y="2" width="26" height="26"/>
+                                        <rect key="frame" x="50" y="2" width="26" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="26" id="DTa-sg-XTH"/>
                                             <constraint firstAttribute="height" constant="26" id="QmL-GW-JHS"/>
@@ -2214,8 +2214,8 @@
                                 <constraints>
                                     <constraint firstItem="tPC-wL-Uhr" firstAttribute="top" secondItem="d6w-lh-UBl" secondAttribute="top" constant="2" id="SM1-x0-OjS"/>
                                     <constraint firstItem="ObF-vq-I3P" firstAttribute="top" secondItem="d6w-lh-UBl" secondAttribute="top" constant="2" id="YWh-JE-NJN"/>
-                                    <constraint firstAttribute="trailing" secondItem="ObF-vq-I3P" secondAttribute="trailing" id="ak7-Zs-VXB"/>
-                                    <constraint firstItem="ObF-vq-I3P" firstAttribute="leading" secondItem="tPC-wL-Uhr" secondAttribute="trailing" constant="8" id="wRE-Pk-YPc"/>
+                                    <constraint firstAttribute="trailing" secondItem="ObF-vq-I3P" secondAttribute="trailing" constant="4" id="ak7-Zs-VXB"/>
+                                    <constraint firstItem="ObF-vq-I3P" firstAttribute="leading" secondItem="tPC-wL-Uhr" secondAttribute="trailing" constant="16" id="wRE-Pk-YPc"/>
                                 </constraints>
                             </view>
                         </barButtonItem>
@@ -5449,11 +5449,11 @@
                         </view>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="jnL-Eo-nLs">
                             <view key="customView" contentMode="scaleToFill" id="7yb-iV-t66">
-                                <rect key="frame" x="232" y="5" width="71" height="33"/>
+                                <rect key="frame" x="233" y="5" width="80" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q5n-TZ-MCz">
-                                        <rect key="frame" x="11" y="2" width="26" height="26"/>
+                                        <rect key="frame" x="8" y="2" width="26" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="26" id="HDJ-mG-fhc"/>
                                             <constraint firstAttribute="height" constant="26" id="tql-GN-KQo"/>
@@ -5468,7 +5468,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Klm-ir-Qjs">
-                                        <rect key="frame" x="45" y="2" width="26" height="26"/>
+                                        <rect key="frame" x="50" y="2" width="26" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="26" id="VsW-Sa-oKy"/>
                                             <constraint firstAttribute="height" constant="26" id="liL-wj-jot"/>
@@ -5485,8 +5485,8 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="Klm-ir-Qjs" firstAttribute="top" secondItem="7yb-iV-t66" secondAttribute="top" constant="2" id="ERo-nQ-nJ8"/>
-                                    <constraint firstItem="Klm-ir-Qjs" firstAttribute="leading" secondItem="q5n-TZ-MCz" secondAttribute="trailing" constant="8" id="FbZ-Ff-DdS"/>
-                                    <constraint firstAttribute="trailing" secondItem="Klm-ir-Qjs" secondAttribute="trailing" id="QGB-5S-cpj"/>
+                                    <constraint firstItem="Klm-ir-Qjs" firstAttribute="leading" secondItem="q5n-TZ-MCz" secondAttribute="trailing" constant="16" id="FbZ-Ff-DdS"/>
+                                    <constraint firstAttribute="trailing" secondItem="Klm-ir-Qjs" secondAttribute="trailing" constant="4" id="QGB-5S-cpj"/>
                                     <constraint firstItem="q5n-TZ-MCz" firstAttribute="top" secondItem="7yb-iV-t66" secondAttribute="top" constant="2" id="UHI-jf-n9d"/>
                                 </constraints>
                             </view>
@@ -6919,6 +6919,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="qC0-vu-5Tc"/>
+        <segue reference="biM-JQ-efj"/>
     </inferredMetricsTieBreakers>
 </document>
